# docs-rs-to-txt

./: Cargo.toml  reqwestblocking-Rust.txt
src/: main.rs
