[package]
name = "docs-rs-to-txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
regex = "1"
polars = {version = "0.35.4", features = ["lazy", "rolling_window"] }